src/test/ui/asm/bad-options.stderr
error: the `nomem` and `readonly` options are mutually exclusive
  --> $DIR/bad-options.rs:8:18
   |
LL |         asm!("", options(nomem, readonly));
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^

error: the `pure` and `noreturn` options are mutually exclusive
  --> $DIR/bad-options.rs:10:18
   |
LL |         asm!("", options(pure, nomem, noreturn));
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: asm with `pure` option must have at least one output
  --> $DIR/bad-options.rs:10:18
   |
LL |         asm!("", options(pure, nomem, noreturn));
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: asm with `pure` option must have at least one output
  --> $DIR/bad-options.rs:13:33
   |
LL |         asm!("{}", in(reg) foo, options(pure, nomem));
   |                                 ^^^^^^^^^^^^^^^^^^^^

error: asm outputs are not allowed with the `noreturn` option
  --> $DIR/bad-options.rs:15:20
   |
LL |         asm!("{}", out(reg) foo, options(noreturn));
   |                    ^^^^^^^^^^^^

error: expected one of `)` or `att_syntax`, found `nomem`
  --> $DIR/bad-options.rs:20:25
   |
LL | global_asm!("", options(nomem));
   |                         ^^^^^ expected one of `)` or `att_syntax`

error: expected one of `)` or `att_syntax`, found `readonly`
  --> $DIR/bad-options.rs:22:25
   |
LL | global_asm!("", options(readonly));
   |                         ^^^^^^^^ expected one of `)` or `att_syntax`

error: expected one of `)` or `att_syntax`, found `noreturn`
  --> $DIR/bad-options.rs:24:25
   |
LL | global_asm!("", options(noreturn));
   |                         ^^^^^^^^ expected one of `)` or `att_syntax`

error: expected one of `)` or `att_syntax`, found `pure`
  --> $DIR/bad-options.rs:26:25
   |
LL | global_asm!("", options(pure));
   |                         ^^^^ expected one of `)` or `att_syntax`

error: expected one of `)` or `att_syntax`, found `nostack`
  --> $DIR/bad-options.rs:28:25
   |
LL | global_asm!("", options(nostack));
   |                         ^^^^^^^ expected one of `)` or `att_syntax`

error: expected one of `)` or `att_syntax`, found `preserves_flags`
  --> $DIR/bad-options.rs:30:25
   |
LL | global_asm!("", options(preserves_flags));
   |                         ^^^^^^^^^^^^^^^ expected one of `)` or `att_syntax`

error: aborting due to 11 previous errors

